@@ -792,4 +792,10 @@
   <description>Default property values for newly created tables</description>
 </property>
 
+<property>
+  <name>hive.variable.substitute</name>
+  <value>true</value>
+  <description>This enables substitution using syntax like ${var} ${system:var} and ${env:var}.</description>
+</property>
+
 </configuration>
