@@ -18,11 +18,12 @@
 
 package org.apache.hadoop.hive.ql.processors;
 
-import java.util.Properties;
 import java.util.Map;
+import java.util.Properties;
 import java.util.SortedMap;
 import java.util.TreeMap;
 
+import org.apache.hadoop.hive.ql.parse.VariableSubstitution;
 import org.apache.hadoop.hive.ql.session.SessionState;
 
 /**
@@ -32,6 +33,9 @@ import org.apache.hadoop.hive.ql.session.SessionState;
 public class SetProcessor implements CommandProcessor {
 
   private static String prefix = "set: ";
+  public static final String ENV_PREFIX = "env:";
+  public static final String SYSTEM_PREFIX = "system:";
+  public static final String HIVECONF_PREFIX = "hiveconf:";
 
   public static boolean getBoolean(String value) {
     if (value.equals("on") || value.equals("true")) {
@@ -57,6 +61,16 @@ public class SetProcessor implements CommandProcessor {
     for (Map.Entry<String, String> entries : sortedMap.entrySet()) {
       ss.out.println(entries.getKey() + "=" + entries.getValue());
     }
+
+    for (Map.Entry<String, String> entry : mapToSortedMap(System.getenv()).entrySet()) {
+      ss.out.println(ENV_PREFIX+entry.getKey() + "=" + entry.getValue());
+    }
+
+    for (Map.Entry<String, String> entry :
+      propertiesToSortedMap(System.getProperties()).entrySet() ) {
+      ss.out.println(SYSTEM_PREFIX+entry.getKey() + "=" + entry.getValue());
+    }
+
   }
 
   private void dumpOption(Properties p, String s) {
@@ -70,6 +84,80 @@ public class SetProcessor implements CommandProcessor {
   }
 
   public void init() {
+  }
+
+  private CommandProcessorResponse setVariable(String varname, String varvalue){
+    SessionState ss = SessionState.get();
+    if (varname.startsWith(SetProcessor.ENV_PREFIX)){
+      ss.err.println("env:* variables can not be set.");
+      return new CommandProcessorResponse(1);
+    } else if (varname.startsWith(SetProcessor.SYSTEM_PREFIX)){
+      String propName = varname.substring(SetProcessor.SYSTEM_PREFIX.length());
+      System.getProperties().setProperty(propName, new VariableSubstitution().substitute(ss.getConf(),varvalue));
+      return new CommandProcessorResponse(0);
+    } else if (varname.startsWith(SetProcessor.HIVECONF_PREFIX)){
+      String propName = varname.substring(SetProcessor.HIVECONF_PREFIX.length());
+      ss.getConf().set(propName, new VariableSubstitution().substitute(ss.getConf(),varvalue));
+      return new CommandProcessorResponse(0);
+    } else {
+      ss.getConf().set(varname, new VariableSubstitution().substitute(ss.getConf(),varvalue) );
+      return new CommandProcessorResponse(0);
+    }
+  }
+
+  private SortedMap<String,String> propertiesToSortedMap(Properties p){
+    SortedMap<String,String> sortedPropMap = new TreeMap<String,String>();
+    for (Map.Entry<Object, Object> entry :System.getProperties().entrySet() ){
+      sortedPropMap.put( (String) entry.getKey(), (String) entry.getValue());
+    }
+    return sortedPropMap;
+  }
+
+  private SortedMap<String,String> mapToSortedMap(Map<String,String> data){
+    SortedMap<String,String> sortedEnvMap = new TreeMap<String,String>();
+    sortedEnvMap.putAll( data );
+    return sortedEnvMap;
+  }
+
+
+  private CommandProcessorResponse getVariable(String varname){
+    SessionState ss = SessionState.get();
+    if (varname.equals("silent")){
+      ss.out.println("silent" + "=" + ss.getIsSilent());
+      return new CommandProcessorResponse(0);
+    }
+    if (varname.startsWith(SetProcessor.SYSTEM_PREFIX)){
+      String propName = varname.substring(SetProcessor.SYSTEM_PREFIX.length());
+      String result = System.getProperty(propName);
+      if (result != null){
+        ss.out.println(SetProcessor.SYSTEM_PREFIX+propName + "=" + result);
+        return new CommandProcessorResponse(0);
+      } else {
+        ss.out.println( propName + " is undefined as a system property");
+        return new CommandProcessorResponse(1);
+      }
+    } else if (varname.indexOf(SetProcessor.ENV_PREFIX)==0){
+      String var = varname.substring(ENV_PREFIX.length());
+      if (System.getenv(var)!=null){
+        ss.out.println(SetProcessor.ENV_PREFIX+var + "=" + System.getenv(var));
+        return new CommandProcessorResponse(0);
+      } else {
+        ss.out.println(varname + " is undefined as an environmental variable");
+        return new CommandProcessorResponse(1);
+      }
+    } else if (varname.indexOf(SetProcessor.HIVECONF_PREFIX)==0) {
+      String var = varname.substring(SetProcessor.HIVECONF_PREFIX.length());
+      if (ss.getConf().get(var)!=null){
+        ss.out.println(SetProcessor.HIVECONF_PREFIX+var + "=" + ss.getConf().get(var));
+        return new CommandProcessorResponse(0);
+      } else {
+        ss.out.println(varname + " is undefined as a hive configuration variable");
+        return new CommandProcessorResponse(1);
+      }
+    } else {
+      dumpOption(ss.getConf().getAllProperties(), varname);
+      return new CommandProcessorResponse(0);
+    }
   }
 
   public CommandProcessorResponse run(String command) {
@@ -87,31 +175,24 @@ public class SetProcessor implements CommandProcessor {
     }
 
     String[] part = new String[2];
-
     int eqIndex = nwcmd.indexOf('=');
-    if (eqIndex == -1) {
-      // no equality sign - print the property out
-      dumpOption(ss.getConf().getAllProperties(), nwcmd);
-      return new CommandProcessorResponse(0);
-    } else if (eqIndex == nwcmd.length() - 1) {
-      part[0] = nwcmd.substring(0, nwcmd.length() - 1);
-      part[1] = "";
+
+    if (nwcmd.contains("=")){
+      if (eqIndex == nwcmd.length() - 1) { //x=
+        part[0] = nwcmd.substring(0, nwcmd.length() - 1);
+        part[1] = "";
+      } else { //x=y
+        part[0] = nwcmd.substring(0, eqIndex).trim();
+        part[1] = nwcmd.substring(eqIndex + 1).trim();
+      }
+      if (part[0].equals("silent")) {
+        ss.setIsSilent(getBoolean(part[1]));
+        return new CommandProcessorResponse(0);
+      }
+      return setVariable(part[0],part[1]);
     } else {
-      part[0] = nwcmd.substring(0, eqIndex).trim();
-      part[1] = nwcmd.substring(eqIndex + 1).trim();
+      return getVariable(nwcmd);
     }
 
-    try {
-      if (part[0].equals("silent")) {
-        boolean val = getBoolean(part[1]);
-        ss.setIsSilent(val);
-      } else {
-        ss.getConf().set(part[0], part[1]);
-      }
-    } catch (IllegalArgumentException err) {
-      ss.err.println(err.getMessage());
-      return new CommandProcessorResponse(1);
-    }
-    return new CommandProcessorResponse(0);
   }
 }
